--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "secondproject",
   "version": "0.1.0",
-  "homepage": "https://bhritick.github.io/secondproject/",
+  "homepage": "https://bhritick.github.io/secondproject",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
